--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,11 +53,11 @@ jobs:
           - environment: hyp3-isce
             domain: hyp3-isce.asf.alaska.edu
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
-            image_tag: test
+            image_tag: latest
             product_lifetime_in_days: 30
             quota: 0
             deploy_ref: refs/heads/isce
-            job_files: job_spec/INSAR_ISCE.yml
+            job_files: job_spec/INSAR_ISCE.yml job_spec/INSAR_ISCE_TEST.yml
 
     environment:
       name: ${{ matrix.environment }}
