--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -8,3 +8,11 @@ moto==1.3.14
 pytest==6.2.4
 PyYAML==5.4.1
 responses==0.13.3
+flake8==4.0.1
+flake8-import-order==0.18.1
+flake8-blind-except==0.2.0
+flake8-builtins==1.5.3
+openapi-spec-validator==0.3.1
+click==8.0.3
+prance==0.21.8.0
+cfn-lint==0.56.0
