--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -10,7 +10,9 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - run: python -m pip install --upgrade pip
+      - run: |
+          python -m pip install --upgrade pip
+          make install
 
       - run: make flake8
 
