--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -54,10 +54,10 @@ runs:
           pip install --upgrade pip
           make install
           make files='${{ inputs.JOB_FILES }}' render
-          pip install -r apps/api/requirements-api.txt -t apps/api/src
-          pip install -r apps/process-new-granules/requirements-process-new-granules.txt -t apps/process-new-granules/src
-          pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
-          pip install -r apps/start-execution/start-execution-requirements.txt -t apps/start-execution/src
+          python -m pip install -r requirements-apps-api.txt -t apps/api/src
+          python -m pip install -r requirements-apps-process-new-granules.txt -t apps/process-new-granules/src
+          python -m pip install -r requirements-apps-update-db.txt -t apps/update-db/src
+          python -m pip install -r requirements-apps-start-execution.txt -t apps/start-execution/src
       - name: Package and deploy
         shell: bash
         run: |
