--- a/job_spec/AUTORIFT.yml
+++ b/job_spec/AUTORIFT.yml
@@ -9,6 +9,9 @@ AUTORIFT:
         type: array
         minItems: 2
         maxItems: 2
+        example:
+          - S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
+          - S1A_IW_SLC__1SSV_20150504T120217_20150504T120229_005771_00769E_EF9A
         items:
           anyOf:
             - description: The name of the Sentinel-1 SLC granule to process
