Update autorift paramter file urls

--- a/job_spec/AUTORIFT_ITS_LIVE.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE.yml
@@ -50,7 +50,7 @@ AUTORIFT:
     - --bucket-prefix
     - Ref::bucket_prefix
     - --parameter-file
-    - '/vsicurl/http://its-live-data.jpl.nasa.gov.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
+    - '/vsicurl/http://its-live-data.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
     - --naming-scheme
     - ITS_LIVE_PROD
     - Ref::granules
