add ScaleCluster stack to main-cf.yml

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -23,6 +23,9 @@ Conditions:
 
 Outputs:
 
+  ComputeEnvironmentArn:
+    Value: !Ref ComputeEnvironment
+
   JobQueueArn:
     Value: !Ref JobQueue
 
