adjust lambda function permissions

--- a/apps/scale-cluster/scale-cluster-cf.yml
+++ b/apps/scale-cluster/scale-cluster-cf.yml
@@ -52,7 +52,7 @@ Resources:
                   - logs:PutLogEvents
                 Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
               - Effect: Allow
-                Action: cloudwatch:GetMetricData
+                Action: ce:GetCostAndUsage
                 Resource: "*"
               - Effect: Allow
                 Action: batch:UpdateComputeEnvironment
