add logic for switching cluster size

--- a/tests/cfg.env
+++ b/tests/cfg.env
@@ -5,6 +5,7 @@ SUBSCRIPTIONS_TABLE_NAME=hyp3-db-table-subscriptions
 AUTH_PUBLIC_KEY=123456789
 AUTH_ALGORITHM=HS256
 MONTHLY_JOB_QUOTA_PER_USER=25
+MONTHLY_COMPUTE_BUDGET=93
 SYSTEM_AVAILABLE=true
 AWS_DEFAULT_REGION=us-west-2
 AWS_ACCESS_KEY_ID=testing
