Provide two watermap jobs; old one pinned for HKH consistency, new one unpinned for hurricanes

--- a/job_spec/WATER_MAP_OLD.yml
+++ b/job_spec/WATER_MAP_OLD.yml
@@ -1,5 +1,6 @@
-WATER_MAP:
+WATER_MAP_OLD:
   image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-gamma
+  image_tag: '4.6.3'
   required_parameters:
     - granules
   parameters:
