--- a/tests/cfg.env
+++ b/tests/cfg.env
@@ -6,6 +6,9 @@ AUTH_PUBLIC_KEY=123456789
 AUTH_ALGORITHM=HS256
 MONTHLY_JOB_QUOTA_PER_USER=25
 MONTHLY_COMPUTE_BUDGET=93
+SMALL_FLEET_SIZE=600
+LARGE_FLEET_SIZE=1600
+REQUIRED_SURPLUS=1000
 SYSTEM_AVAILABLE=true
 AWS_DEFAULT_REGION=us-west-2
 AWS_ACCESS_KEY_ID=testing
