--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -79,21 +79,25 @@ Parameters:
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
 
   DefaultMaxvCpus:
+    Description: Default maximum size for the AWS Batch compute environment
     Type: Number
     MinValue: 0
     Default: 60
 
   ExpandedMaxvCpus:
+    Description: Expanded maximum size for the AWS Batch compute environment to use when month-to-date budget sufficiently exceeds month-to-date spending
     Type: Number
     MinValue: 0
     Default: 60
 
   MonthlyComputeBudget:
+    Description: Total budget allocated for AWS Batch processing per month, in dollars
     Type: Number
     MinValue: 0
     Default: 0
 
   RequiredSurplus:
+    Description: Amount month-to-date budget must exceed month-to-date spending to increase fleet size, in dollars
     Type: Number
     MinValue: 0
     Default: 0
