--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -45,16 +45,16 @@ inputs:
     description: "Comma separated list of IP CIDR blocks that will receive HTTP 403 FORBIDDEN responses from the API"
     required: true
   MONTHLY_COMPUTE_BUDGET:
-    description: ""
+    description: "Total budget allocated for AWS Batch processing per month, in dollars"
     required: true
   DEFAULT_MAX_VCPUS:
-    description: ""
+    description: "Default maximum size for the AWS Batch compute environment"
     required: true
   EXPANDED_MAX_VCPUS:
-    description: ""
+    description: "Expanded maximum size for the AWS Batch compute environment to use when month-to-date budget sufficiently exceeds month-to-date spending"
     required: true
   REQUIRED_SURPLUS:
-    description: ""
+    description: "Amount month-to-date budget must exceed month-to-date spending to increase fleet size, in dollars"
     required: true
 
 runs:
