--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -45,7 +45,7 @@ inputs:
     description: "Comma separated list of IP CIDR blocks that will receive HTTP 403 FORBIDDEN responses from the API"
     required: true
   MONTHLY_COMPUTE_BUDGET:
-    description: "Total budget allocated for AWS Batch processing per month, in dollars"
+    description: "Total budget allocated for AWS Batch processing per month, in dollars. Ignored when DefaultMaxvCpus = ExpandedMaxvCpus."
     required: true
   DEFAULT_MAX_VCPUS:
     description: "Default maximum size for the AWS Batch compute environment"
@@ -54,7 +54,7 @@ inputs:
     description: "Expanded maximum size for the AWS Batch compute environment to use when month-to-date budget sufficiently exceeds month-to-date spending"
     required: true
   REQUIRED_SURPLUS:
-    description: "Amount month-to-date budget must exceed month-to-date spending to increase fleet size, in dollars"
+    description: "Amount by which month-to-date budget must exceed month-to-date spending to increase fleet size, in dollars. Ignored when DefaultMaxvCpus = ExpandedMaxvCpus."
     required: true
 
 runs:
