fix typo in cloudformation condition

--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -45,7 +45,7 @@ Conditions:
 
   LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
-  UseCustomDomainName: !Not [!Equals [!Ref DomainNames, ""]]
+  UseCustomDomainName: !Not [!Equals [!Ref DomainName, ""]]
 
 Outputs:
 
