--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -426,6 +426,8 @@ components:
           $ref: "#/components/schemas/list_of_urls"
         expiration_time:
           $ref: "#/components/schemas/datetime"
+        priority:
+          $ref: "#/components/schemas/priority"
 
     validate_only:
       type: boolean
@@ -515,6 +517,11 @@ components:
       type: array
       items:
         type: string
+
+    priority:
+      type: integer
+      minimum: 0
+      maximum: 9999
 
   securitySchemes:
     EarthDataLogin:
