--- a/job_spec/AUTORIFT_ITS_LIVE_EU.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE_EU.yml
@@ -1,5 +1,5 @@
 AUTORIFT:
-  image: 230742024655.dkr.ecr.eu-central-1.amazonaws.com/hyp3-autorift
+  image: ghcr.io/asfhyp3/hyp3-autorift
   required_parameters:
     - granules
   parameters:
