reduce desiredVcpus when necessary when scaling down

--- a/apps/scale-cluster/scale-cluster-cf.yml
+++ b/apps/scale-cluster/scale-cluster-cf.yml
@@ -71,7 +71,9 @@ Resources:
                 Action: ce:GetCostAndUsage
                 Resource: "*"
               - Effect: Allow
-                Action: batch:UpdateComputeEnvironment
+                Action:
+                - batch:DescribeComputeEnvironments
+                - batch:UpdateComputeEnvironment
                 Resource: !Ref ComputeEnvironmentArn
 
   Lambda:
