--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -56,6 +56,12 @@ inputs:
   REQUIRED_SURPLUS:
     description: "Amount by which month-to-date budget must exceed month-to-date spending to increase fleet size, in dollars. Ignored when DefaultMaxvCpus = ExpandedMaxvCpus."
     required: true
+  PERMISSIONS_BOUNDARY_ARN:
+    description: "Arn of permissions boundary to provide to any created IAM roles"
+    required: true
+  DEPLOY_LAMDAS_IN_VPC:
+    description: "Whether or not to deploy lambda functions in a VPC"
+    required: false
 
 runs:
   using: "composite"
@@ -97,4 +103,6 @@ runs:
                 DefaultMaxvCpus='${{ inputs.DEFAULT_MAX_VCPUS }}' \
                 ExpandedMaxvCpus='${{ inputs.EXPANDED_MAX_VCPUS }}' \
                 MonthlyComputeBudget='${{ inputs.MONTHLY_COMPUTE_BUDGET }}' \
-                RequiredSurplus='${{ inputs.REQUIRED_SURPLUS }}'
+                RequiredSurplus='${{ inputs.REQUIRED_SURPLUS }}' \
+                PermissionsBoundaryArn='${{ inputs.PERMISSIONS_BOUNDARY_ARN }}' \
+                DeployLambdasInVpc='${{ inputes.DEPLOY_LAMBDAS_IN_VPC }}'
