--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -105,4 +105,4 @@ runs:
                 MonthlyComputeBudget='${{ inputs.MONTHLY_COMPUTE_BUDGET }}' \
                 RequiredSurplus='${{ inputs.REQUIRED_SURPLUS }}' \
                 PermissionsBoundaryArn='${{ inputs.PERMISSIONS_BOUNDARY_ARN }}' \
-                DeployLambdasInVpc='${{ inputes.DEPLOY_LAMBDAS_IN_VPC }}'
+                DeployLambdasInVpc='${{ inputs.DEPLOY_LAMBDAS_IN_VPC }}'
