a bit of cleanup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
             default_max_vcpus: 600
             expanded_max_vcpus: 1600
             required_surplus: 1000
-            permission_boundary_arn: ''
-            deploy_lamdas_in_vpc: false
+            permissions_boundary_arn: ''
+            deploy_lambdas_in_vpc: false
 
           - environment: hyp3-test
             domain: hyp3-test-api.asf.alaska.edu
@@ -38,8 +38,8 @@ jobs:
             default_max_vcpus: 600
             expanded_max_vcpus: 1600
             required_surplus: 1000
-            permission_boundary_arn: ''
-            deploy_lamdas_in_vpc: false
+            permissions_boundary_arn: ''
+            deploy_lambdas_in_vpc: false
 
           - environment: edc-uat
             domain: ''
@@ -52,8 +52,8 @@ jobs:
             default_max_vcpus: 600
             expanded_max_vcpus: 1600
             required_surplus: 1000
-            permission_boundary_arn: ${{ secrets.PERMISSIONS_BOUNDARY_ARN }}
-            deploy_lamdas_in_vpc: false
+            permissions_boundary_arn: ${{ secrets.PERMISSIONS_BOUNDARY_ARN }}
+            deploy_lambdas_in_vpc: false
 
           - environment: hyp3-autorift
             domain: hyp3-autorift.asf.alaska.edu
@@ -66,8 +66,8 @@ jobs:
             default_max_vcpus: 1600
             expanded_max_vcpus: 1600
             required_surplus: 0
-            permission_boundary_arn: ''
-            deploy_lamdas_in_vpc: false
+            permissions_boundary_arn: ''
+            deploy_lambdas_in_vpc: false
 
           - environment: hyp3-autorift-eu
             domain: hyp3-autorift-eu.asf.alaska.edu
@@ -80,8 +80,8 @@ jobs:
             default_max_vcpus: 1600
             expanded_max_vcpus: 1600
             required_surplus: 0
-            permission_boundary_arn: ''
-            deploy_lamdas_in_vpc: false
+            permissions_boundary_arn: ''
+            deploy_lambdas_in_vpc: false
 
     environment:
       name: ${{ matrix.environment }}
@@ -122,8 +122,8 @@ jobs:
           EXPANDED_MAX_VCPUS: ${{ matrix.expanded_max_vcpus }}
           MONTHLY_COMPUTE_BUDGET: ${{ secrets.MONTHLY_COMPUTE_BUDGET }}
           REQUIRED_SURPLUS: ${{ matrix.required_surplus }}
-          PERMISSIONS_BOUNDARY_ARN: ${{ matrix.permission_boundary_arn }}
-          DEPLOY_LAMBDAS_IN_VPC: ${{ matrix.deploy_lamdas_in_vpc }}
+          PERMISSIONS_BOUNDARY_ARN: ${{ matrix.permissions_boundary_arn }}
+          DEPLOY_LAMBDAS_IN_VPC: ${{ matrix.deploy_lambdas_in_vpc }}
 
   tag:
     runs-on: ubuntu-latest
