--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -69,7 +69,7 @@ Parameters:
     Type: String
     Default: ""
 
-  DeployLambdasInVpc:
+  EarthdataCloud:
     Type: String
     Default: false
     AllowedValues:
@@ -106,7 +106,9 @@ Parameters:
 
 Conditions:
 
-  LambdasInVpc: !Equals [!Ref DeployLambdasInVpc, "true"]
+  LambdasInVpc: !Equals [!Ref EarthdataCloud, "true"]
+
+  PublicBucket: !Equals [!Ref EarthdataCloud, "false"]
 
   ScaleCluster: !Not [!Equals [!Ref DefaultMaxvCpus, !Ref ExpandedMaxvCpus]]
 
@@ -248,6 +250,7 @@ Resources:
 
   BucketPolicy:
     Type: AWS::S3::BucketPolicy
+    Condition: PublicBucket
     Properties:
       Bucket: !Ref ContentBucket
       PolicyDocument:
