enable encryption for monitoring sns topic

--- a/apps/monitoring-cf.yml
+++ b/apps/monitoring-cf.yml
@@ -11,6 +11,8 @@ Resources:
 
   AlarmTopic:
     Type: AWS::SNS::Topic
+    Properties:
+      KmsMasterKeyId: alias/aws/sns
 
   StepFunctionAlarm:
     Type: AWS::CloudWatch::Alarm
