add support for private rest api

--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -134,6 +134,7 @@ Resources:
         SystemAvailable: !Ref SystemAvailable
         BannedCidrBlocks: !Ref BannedCidrBlocks
         PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
+        VpcId: !Ref VpcId
         SecurityGroupId: !If [LambdasInVpc, !GetAtt Cluster.Outputs.SecurityGroupId, ""]
         SubnetIds: !If [LambdasInVpc, !Join [',', !Ref SubnetIds], ""]
       TemplateURL: api/api-cf.yml
