--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -159,62 +159,9 @@ jobs:
           EARTHDATA_CLOUD: ${{ matrix.earthdata_cloud }}
           AMI_ID: ${{ matrix.ami_id }}
 
-  tag:
-    runs-on: ubuntu-latest
-    needs: deploy
+  call-bump-version-workflow:
     if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.TOOLS_BOT_PAK }}
-
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-
-      - name: install python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install bump2version
-
-      - name: Get associated PR
-        uses: helaili/github-graphql-action@2.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
-        with:
-          query: .github/queries/asssociated-pr.query.yml
-          outputFile: pr.json
-          owner: ASFHyP3
-          name: hyp3
-          sha: ${{ github.sha }}
-
-      - name: Get PR labels
-        uses: helaili/github-graphql-action@2.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
-        with:
-          query: .github/queries/pr-labels.query.yml
-          outputFile: labels.json
-          owner: ASFHyP3
-          name: hyp3
-
-      - name: Get tag data
-        run: |
-          LABEL_QUERY='.data.repository.pullRequest.labels.nodes[].name'
-          SELECT='select(. == "major" or . == "minor" or . == "patch")'
-          echo "BUMP_PART=$(jq --raw-output  "${LABEL_QUERY} | ${SELECT}" labels.json | sort | head -1)" >> $GITHUB_ENV
-          PR_QUERY='.data.repository.commit.associatedPullRequests.edges[0].node.title'
-          echo "TAG_MSG=$(jq --raw-output "${PR_QUERY}"  pr.json)" >> $GITHUB_ENV
-
-      - name: Tag version
-        if: env.BUMP_PART != 'bumpless'
-        run: |
-          git fetch origin +refs/tags/*:refs/tags/*
-          git config user.email "UAF-asf-apd@alaska.edu"
-          git config user.name "tools-bot"
-          bump2version --current-version $(git describe --abbrev=0) \
-              --tag --tag-message "${TAG_MSG}" "${BUMP_PART}"
-          git push --tags
-          echo "Tagged version $(git describe --abbrev=0) and pushed back to repo"
+    needs: deploy
+    uses: ASFHyP3/actions/.github/workflows/reusable-bump-version.yml@master
+    secrets:
+      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
