--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,6 +162,6 @@ jobs:
   call-bump-version-workflow:
     if: github.ref == 'refs/heads/main'
     needs: deploy
-    uses: ASFHyP3/actions/.github/workflows/reusable-bump-version.yml@master
+    uses: ASFHyP3/actions/.github/workflows/reusable-bump-version.yml@main
     secrets:
       USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
