--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -42,7 +42,6 @@ jobs:
 
       - run: make openapi-validate
 
-
   statelint:
     runs-on: ubuntu-latest
     steps:
@@ -62,3 +61,7 @@ jobs:
           make render
           sed -i 's/"Resource": "${.*}"/"Resource": "foo:bar"/' apps/step-function.json
           statelint apps/step-function.json
+
+
+  call-secrets-analysis-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-secrets-analysis.yml@main
