add deployment for earthdata cloud production account

--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -69,7 +69,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-      - name: install dependancies and render templates
+      - name: install dependencies and render templates
         shell: bash
         run: |
           pip install --upgrade pip
